<resources>
    <string name="app_name">Negosyo Ko</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">NegosyoKo</string>
    <string name="menu_order">Create Order</string>
    <string name="menu_reports">Sales Reports </string>
    <string name="menu_inventory">Inventory </string>
    <string name="menu_activity">Activity </string>
    <string name="menu_settings">Settings</string>

</resources>