<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order_icon"
            android:title="@string/menu_order" />
        <item
            android:id="@+id/nav_reports"
            android:icon="@drawable/report_icon"
            android:title="@string/menu_reports" />
        <item
            android:id="@+id/nav_inventory"
            android:icon="@drawable/inventory_icon"
            android:title="@string/menu_inventory" />
        <item
            android:id="@+id/nav_Activity"
            android:icon="@drawable/activity_icon"
            android:title="@string/menu_activity" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/settings_icon"
            android:title="@string/menu_settings" />
    </group>
</menu>